@@ -1559,6 +1559,12 @@
         <regenerate/>
         <download/>
       </component>
+      <component name="gtk+-properties" dir="gtk+" group="developer-libs">
+	<podir dir="po-properties"/>
+	<potname name="gtk20.pot"/>
+	<branch name="HEAD"/>
+        <regenerate/>
+      </component>
     </version>
   </module>
   <module name="gtkhtml">
@@ -2051,6 +2057,17 @@
         <branch name="HEAD"/>
         <regenerate/>
         <download/>
+      </component>
+    </version>
+  </module>
+  <module name="muine">
+    <version release="gnome-2.6">
+      <component name="muine" dir="muine" group="extras">
+	<podir dir="po"/>
+	<potname name="muine.pot"/>
+	<branch name="HEAD"/>
+	<regenerate/>
+	<download/>
       </component>
     </version>
   </module>
