@@ -1,3 +1,7 @@
+2004-01-18  Christian Rose  <menthos@menthos.com>
+
+	* translation-status.xml: Added muine and gtk+-properties.
+
 2004-01-17  Christian Rose  <menthos@menthos.com>
 
 	* translation-status.xml: Switched guikachu to point at HEAD.
